Define DLTX animation settings as regular overrides

--- a/gamedata/configs/items/items/mod_animations_settings_zzz_bhs_changes.ltx
+++ b/gamedata/configs/items/items/mod_animations_settings_zzz_bhs_changes.ltx
@@ -120,7 +120,7 @@ helm = true
 ; -------------------------------------------------------
 
 ; Ibuprofen
-@[salicidic_acid]
+![salicidic_acid]
 snd = interface\item_usage\pills_use
 anm = item_ea_caffeine
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -128,7 +128,7 @@ tm = 3700
 helm = false
 
 ; Yadylin
-@[yadylin]
+![yadylin]
 snd = interface\item_usage\pills_use
 anm = item_ea_caffeine
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -136,7 +136,7 @@ tm = 3700
 helm = false
 
 ; Diclofenac
-@[analgetic]
+![analgetic]
 snd = interface\item_usage\pills_use
 anm = item_ea_caffeine
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -144,7 +144,7 @@ tm = 3700
 helm = false
 
 ; Oxycodone
-@[tetanus]
+![tetanus]
 snd = interface\item_usage\pills_use
 anm = item_ea_caffeine
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -152,7 +152,7 @@ tm = 3700
 helm = false
 
 ; Metamizole Shot
-@[analgin]
+![analgin]
 snd = interface\item_usage\syringe2
 anm = item_ea_syringer_guns
 cam = itemuse_anm_effects\antirad.anm
@@ -160,7 +160,7 @@ tm = 3200
 helm = true
 
 ; Morphine Shot
-@[morphine]
+![morphine]
 snd = interface\item_usage\syringe2
 anm = item_ea_syringer_guns
 cam = itemuse_anm_effects\antirad.anm
@@ -170,34 +170,34 @@ helm = true
 
 
 ; First Aid Kit
-@[medkit]
+![medkit]
 snd = interface\item_usage\medkit_use_slow80
 anm = item_ea_medkit
 cam = itemuse_anm_effects\aptechka_use.anm
 tm = 10000
-speed = 0.8
+speed = 0.9
 helm = true
 
 ; Military Medkit
-@[medkit_army]:medkit
+![medkit_army]:medkit
 snd = interface\item_usage\medkit_use_slow80
 anm = item_ea_medkit_army
 cam = itemuse_anm_effects\aptechka_use.anm
 tm = 10000
-speed = 0.8
+speed = 0.9
 helm = true
 
 ; Expeditionary Medkit
-@[medkit_scientic]:medkit
+![medkit_scientic]:medkit
 snd = interface\item_usage\medkit_use_slow80
 anm = item_ea_medkit_scientic
 cam = itemuse_anm_effects\aptechka_use.anm
 tm = 10000
-speed = 0.8
+speed = 0.9
 helm = true
 
 ; Stimpack
-@[stimpack]
+![stimpack]
 snd = interface\item_usage\antirad_use
 anm = item_ea_stimpack
 cam = itemuse_anm_effects\antirad_use.anm
@@ -205,7 +205,7 @@ tm = 4600
 helm = true
 
 ; Military Stimpack
-@[stimpack_army]
+![stimpack_army]
 snd = interface\item_usage\antirad_use
 anm = item_ea_stimpack_army
 cam = itemuse_anm_effects\antirad_use.anm
@@ -213,7 +213,7 @@ tm = 4600
 helm = true
 
 ; Expeditionary Stimpack
-@[stimpack_scientic]
+![stimpack_scientic]
 snd = interface\item_usage\antirad_use
 anm = item_ea_stimpack_scientic
 cam = itemuse_anm_effects\antirad_use.anm
@@ -229,7 +229,7 @@ helm = true
 !helm
 
 ; Fluorapine Shot
-@[propital]
+![propital]
 snd = interface\item_usage\syringe1
 anm = item_ea_syringe_def
 cam = itemuse_anm_effects\antirad.anm
@@ -237,7 +237,7 @@ tm = 7200
 helm = true
 
 ; Axyltallisal
-@[rebirth]
+![rebirth]
 snd = interface\item_usage\syringe1
 anm = item_ea_syringe_def
 cam = itemuse_anm_effects\antirad.anm
@@ -247,7 +247,7 @@ helm = true
 
 
 ; Vikasolum
-@[drug_coagulant]
+![drug_coagulant]
 snd = interface\item_usage\pills_use
 anm = item_ea_drug_coagulant
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -303,7 +303,7 @@ helm = false
 
 
 ; Caffeine Tablets
-@[caffeine]
+![caffeine]
 snd = interface\item_usage\pills_use
 anm = item_ea_drug_sleepingpills
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -311,7 +311,7 @@ tm = 3700
 helm = false
 
 ; Modafinil
-@[akvatab]
+![akvatab]
 snd = interface\item_usage\pills_use
 anm = item_ea_caffeine
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -325,7 +325,7 @@ helm = false
 ; Unchanged
 
 ; Epinephrine Shot
-@[adrenalin]
+![adrenalin]
 ; CHECK WHY THE FUCK THIS USES AN ANTIQUE SYRINGE
 snd = interface\item_usage\morphine_use_v2
 anm = item_ro_injector_adrenaline
@@ -334,7 +334,7 @@ tm = 4000
 helm = true
 
 ; SJ-I Combat Stimulant Shot
-@[etg]
+![etg]
 snd = interface\item_usage\morphine_use_v2
 anm = item_ro_injector_etg
 cam = itemuse_anm_effects\morphine_cam_anim.anm
@@ -342,7 +342,7 @@ tm = 4000
 helm = true
 
 ; SJ-V Combat Stimulant Shot
-@[sj1]
+![sj1]
 snd = interface\item_usage\morphine_use_v2
 anm = item_ro_injector_sj1
 cam = itemuse_anm_effects\morphine_cam_anim.anm
@@ -350,7 +350,7 @@ tm = 4000
 helm = true
 
 ; SJ-IX Combat Stimulant Shot
-@[sj6]
+![sj6]
 snd = interface\item_usage\morphine_use_v2
 anm = item_ro_injector_sj6
 cam = itemuse_anm_effects\morphine_cam_anim.anm
@@ -359,7 +359,7 @@ helm = true
 
 
 ; Potassium Iodide
-@[antirad_kalium]
+![antirad_kalium]
 snd = interface\item_usage\pills_use
 anm = item_ea_drug_coagulant
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -367,7 +367,7 @@ tm = 3700
 helm = false
 
 ; Radioprotectant
-@[drug_radioprotector]
+![drug_radioprotector]
 snd = interface\item_usage\pills_use
 item_ea_drug_radioprotector
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -375,7 +375,7 @@ tm = 3700
 helm = false
 
 ; Amiprodine Cx Shot
-@[antirad_cystamine]
+![antirad_cystamine]
 snd = interface\item_usage\syringe2
 anm = item_ea_syringer_guns
 cam = itemuse_anm_effects\antirad.anm
@@ -383,7 +383,7 @@ tm = 3200
 helm = true
 
 ; Hipyridine Shot
-@[antirad]
+![antirad]
 snd = interface\item_usage\syringe2
 anm = item_ea_syringer_guns
 cam = itemuse_anm_effects\antirad.anm
@@ -393,7 +393,7 @@ helm = true
 
 
 ; Chlortetracycline
-@[antibio_chlor]
+![antibio_chlor]
 snd = interface\item_usage\pills_use
 anm = item_ea_drug_psy_blocade
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -401,7 +401,7 @@ tm = 3700
 helm = false
 
 ; Sulfadimethoxine
-@[antibio_sulfad]
+![antibio_sulfad]
 snd = interface\item_usage\pills_use
 anm = item_ea_antirad_kalium
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -409,7 +409,7 @@ tm = 3700
 helm = false
 
 ; IP2 Antitoxin
-@[drug_antidot]
+![drug_antidot]
 snd = interface\item_usage\pills_use
 anm = item_ea_antibio_sulfad
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -424,7 +424,7 @@ helm = false
 ; Unchanged
 
 ; Etperazine
-@[antiemetic]
+![antiemetic]
 snd = interface\item_usage\pills_use
 anm = item_ea_drug_antidot
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -432,7 +432,7 @@ tm = 3700
 helm = false
 
 ; Diazepam
-@[drug_sleepingpills]
+![drug_sleepingpills]
 snd = interface\item_usage\pills_use
 anm = item_ea_drug_psy_blocade
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -440,7 +440,7 @@ tm = 3700
 helm = false
 
 ; Haloperidol
-@[drug_psy_blockade]
+![drug_psy_blockade]
 snd = interface\item_usage\pills_use
 anm = item_ea_drug_antidot
 cam = itemuse_anm_effects\tabletki_use.anm
@@ -448,7 +448,7 @@ tm = 3700
 helm = false
 
 ; Anabiotic
-@[drug_anabiotic]
+![drug_anabiotic]
 anm = item_ga_anabiotic
 snd = interface\item_usage\anabiotic
 cam = itemuse_anm_effects\biotic.anm
@@ -459,7 +459,7 @@ helm = false
 
 ; Drinks
 
-@[vodka_quality]
+![vodka_quality]
 snd = interface\item_usage\vodka_use
 anm = item_ea_cmuphob_vodka ; wpn_vodka_hemupob_hud, wpn_vodka_cmuphob_hud
 cam = itemuse_anm_effects\vodka_use.anm
