Fix medication names in comments in patches

--- a/gamedata/configs/mod_system_zzz_saint_bhs_changes_icons.ltx
+++ b/gamedata/configs/mod_system_zzz_saint_bhs_changes_icons.ltx
@@ -279,23 +279,23 @@ inv_grid_height 					= 1
 inv_grid_x 							= 0
 inv_grid_y 							= 5
 
-; Cystamine (Shot)
-![antirad_cystamine]
+; Radioprotectant
+![drug_radioprotector]
 icons_texture 						= ui\ui_saint_bhsro_meds
 inv_grid_width 						= 1
 inv_grid_height 					= 1
 inv_grid_x 							= 1
 inv_grid_y 							= 5
 
-; Radioprotectant
-![drug_radioprotector]
+; Amiprodine Cx (Shot)
+![antirad_cystamine]
 icons_texture 						= ui\ui_saint_bhsro_meds
 inv_grid_width 						= 1
 inv_grid_height 					= 1
 inv_grid_x 							= 2
 inv_grid_y 							= 5
 
-; Anti-Radiation Drugs
+; Hipyridine Shot
 ![antirad]
 icons_texture 						= ui\ui_saint_bhsro_meds
 inv_grid_width 						= 1
