--- a/gamedata/configs/icon_override/ico_zzz_bhs_changes.ltx
+++ b/gamedata/configs/icon_override/ico_zzz_bhs_changes.ltx
@@ -287,7 +287,7 @@ inv_grid_height 					= 1
 inv_grid_x 							= 1
 inv_grid_y 							= 5
 
-; Cystamine (Shot)
+; Amiprodine Cx (Shot)
 ![antirad_cystamine]
 icons_texture 						= ui\ui_saint_bhsro_meds
 inv_grid_width 						= 1
@@ -295,7 +295,7 @@ inv_grid_height 					= 1
 inv_grid_x 							= 2
 inv_grid_y 							= 5
 
-; Anti-Radiation Drugs
+; Hipyridine Shot
 ![antirad]
 icons_texture 						= ui\ui_saint_bhsro_meds
 inv_grid_width 						= 1
