Fix max uses/condition for medication items

--- a/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
+++ b/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
@@ -37,7 +37,8 @@ boost_explosion_immunity						= 0.1
 boost_strike_immunity							= 0.1
 boost_bhs_pain_protection						= 0.2
 boost_time										= 180
-max_uses										= 1
+max_uses										= 5
+use_condition									= false
 tier											= 2
 $spawn											= "food and drugs\analgetic"
 visual											= dynamics\equipments\medical\drug_sleeping_pills.ogf
@@ -102,6 +103,7 @@ boost_strike_immunity							= 0.25
 boost_bhs_pain_protection						= 0.5
 boost_time										= 360
 max_uses										= 1
+use_condition									= false
 tier											= 3
 $spawn											= "food and drugs\analgetic"
 visual											= dynamics\devices\glucose_shots\glucose.ogf
@@ -123,6 +125,7 @@ boost_strike_immunity							= 0.3
 boost_bhs_pain_protection						= 0.6
 boost_time										= 360
 max_uses										= 1
+use_condition									= false
 tier											= 4
 $spawn											= "food and drugs\analgetic"
 visual											= dynamics\eft_meds\itm_stim_morphine.ogf
