Add overrides for tobacco/cigarette items

--- a/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
+++ b/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
@@ -587,3 +587,49 @@ boost_bhs_pain_protection						= 0.01
 
 ![bottle_metal]
 boost_bhs_pain_protection						= 0.015
+; Tobacco
+
+![cigarettes]
+cost											= 1460
+boost_time										= 78
+boost_radiation_restore							= 0.00018 ;was 0.00062
+
+![cigarettes_lucky]
+cost											= 1660
+boost_time										= 78
+boost_radiation_restore							= 0.00022
+
+![cigarettes_russian]
+cost											= 1260
+boost_time										= 78
+boost_radiation_restore							= 0.00017
+
+![cigar]
+cost											= 1960
+boost_time										= 88
+boost_radiation_restore							= 0.00024
+
+![cigar1]
+cost											= 2160
+boost_time										= 88
+boost_radiation_restore							= 0.00024
+
+![cigar2]
+cost											= 2260
+boost_time										= 88
+boost_radiation_restore							= 0.00027
+
+![cigar3]
+cost											= 2360
+boost_time										= 88
+boost_radiation_restore							= 0.00029
+
+![tobacco]
+cost											= 2460
+boost_time										= 58
+boost_radiation_restore							= 0.00036
+
+![hand_rolling_tobacco]
+cost											= 2260
+boost_time										= 58
+boost_radiation_restore							= 0.00032
