Update properties for food and drink items

--- a/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
+++ b/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
@@ -574,19 +574,30 @@ cost											= 6880
 tier											= 5
 
 
-; Food & Drinks
+; Drinks
+
+![flask]
+max_uses										= 2
+
+![beer]
+boost_radiation_restore							= 0.00068
 
 ![vodka]
 boost_bhs_pain_protection						= 0.01
+boost_radiation_restore							= 0.00076
 
 ![vodka2]
 boost_bhs_pain_protection						= 0.01
+boost_radiation_restore							= 0.00086
 
 ![vodka_quality]
 boost_bhs_pain_protection						= 0.01
+boost_radiation_restore							= 0.00108
 
 ![bottle_metal]
 boost_bhs_pain_protection						= 0.015
+boost_radiation_restore							= 0.00072
+
 ; Tobacco
 
 ![cigarettes]
