Introduce icons for glucose shots

--- a/gamedata/configs/icon_override/ico_zzz_bhs_changes.ltx
+++ b/gamedata/configs/icon_override/ico_zzz_bhs_changes.ltx
@@ -370,3 +370,20 @@ inv_grid_width 						= 1
 inv_grid_height 					= 1
 inv_grid_x 							= 3
 inv_grid_y 							= 7
+
+
+; Nutrition
+
+![glucose]
+icons_texture 						= ui\ui_saint_bhsro_meds
+inv_grid_width 						= 1
+inv_grid_height 					= 1
+inv_grid_x 							= 0
+inv_grid_y 							= 8
+
+![glucose_s]
+icons_texture 						= ui\ui_saint_bhsro_meds
+inv_grid_width 						= 1
+inv_grid_height 					= 1
+inv_grid_x 							= 1
+inv_grid_y 							= 8
